# master_thesis

./: Evaluation of Rust_first_draft.pptx  README.md  final_values.xlsx  new_updated_values.xlsx  thesis_presentation_final.pptx  ~$final_values.xlsx
data_structures_with_no_std/: Cargo.toml
data_structures_with_no_std/src/: dynamic_alloc.rs  main.rs  struct_union_std.rs
psoc6-01-pac/: .scr.swp  Cargo.toml  README  scr
psoc6-01-pac/src/: cpuss.rs  dmac.rs  dw0.rs  flashc.rs  gpio.rs  hsiom.rs  ipc.rs  lib.rs  peri.rs  peri_ms.rs  sdhc0.rs
psoc6-01-pac/src/cpuss/: cal_sup_clr.rs  cal_sup_set.rs  cm0_clock_ctl.rs  cm0_ctl.rs  cm0_int0_status.rs  cm0_int1_status.rs  cm0_int2_status.rs  cm0_int3_status.rs  cm0_int4_status.rs  cm0_int5_status.rs  cm0_int6_status.rs  cm0_int7_status.rs  cm0_nmi_ctl.rs  cm0_pc1_handler.rs  cm0_pc2_handler.rs  cm0_pc3_handler.rs  cm0_pc_ctl.rs  cm0_system_int_ctl.rs  cm0_vector_table_base.rs  cm4_ctl.rs  cm4_int0_status.rs  cm4_int1_status.rs  cm4_int2_status.rs  cm4_int3_status.rs  cm4_int4_status.rs  cm4_int5_status.rs  cm4_int6_status.rs  cm4_int7_status.rs  cm4_nmi_ctl.rs  cm4_pwr_ctl.rs  cm4_system_int_ctl.rs  cm4_vector_table_base.rs  ecc_ctl.rs  product_id.rs  ram0_ctl0.rs  ram0_pwr_macro_ctl.rs  ram0_status.rs  ram1_ctl0.rs  ram1_pwr_ctl.rs  ram1_status.rs  (+7 more)
psoc6-01-pac/src/dmac/: active.rs  ch.rs  ctl.rs
psoc6-01-pac/src/dw0/: ch_struct.rs  crc_ctl.rs  crc_data_ctl.rs  crc_lfsr_ctl.rs  crc_pol_ctl.rs  crc_rem_ctl.rs  crc_rem_result.rs  ctl.rs  ecc_ctl.rs  status.rs
psoc6-01-pac/src/flashc/: cm0_ca_ctl0.rs  cm0_ca_ctl1.rs  cm0_ca_status0.rs  cm0_status.rs  cm4_ca_ctl0.rs  cm4_ca_ctl1.rs  cm4_ca_status0.rs  cm4_status.rs  crypto_buff_ctl.rs  dmac_buff_ctl.rs  dw0_buff_ctl.rs  (+11 more)
secure_coding_patterns_f/secure_loop/: Cargo.toml  Readme.md  build.rs  example.h
(+364 files in other folders)
