[package]
name = "dynamic_array"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
psoc6-01-pac = { path = "../psoc6-01-pac" }
embedded-hal = "0.2.5"
