[package]
name = "psoc6-01-pac"
version = "0.1.0"
authors = ["Brie Francois (IFAG DSS TI FWT FW) <Francois.Brie@infineon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
vcell = "0.1.2"
bare-metal = "1.0.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.13"

[features]
rt = ["cortex-m-rt/device"]

[lib]
name = "psoc6_01_pac"
