[package]
authors = ["Ankita Kumari"]
edition = "2018"
readme = "README.md"
name = "psoc6_helloworld"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
psoc6-01-pac = { path = "../../psoc6-01-pac" }
embedded-hal = "0.2.5"
byteorder = { version = "1", default-features = false }

[dependencies.cast]
default-features = false
version = "0.2.6"
libc = "0.2"

[lib]
name = "example"
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"

#[build-dependencies]
#cc = { version = "1.0", features = ["parallel"] }
#pkg-config = "0.3"

#[profile.dev]
#opt-level = "z"